# iscc-tika

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mise.toml  ruff.toml
.cargo/: config.toml
.claude/skills/release/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  init-host.sh  setup-codex.sh  setup-dev.sh  setup-gitconfig.sh
.github/workflows/: ci.yml  install-graalvm-sdkman.sh  install-graalvm.sh  patch-wheel-lib-linux.sh  patch-wheel-lib-macos.sh  release.yml  release_python.yml
bindings/iscc-tika-python/: .gitignore  Cargo.toml  README.md  build-inside-docker.sh  build-wheels.sh  pyproject.toml  rustfmt.toml
bindings/iscc-tika-python/examples/: extract.ipynb  extract_to_stream.py
bindings/iscc-tika-python/python/iscc_tika/: __init__.py
bindings/iscc-tika-python/src/: config.rs  extractor.rs  lib.rs
bindings/iscc-tika-python/tests/: test_extract_bytes.py  test_extract_file.py  test_extract_metadata.py  test_extract_url.py  test_ocr.py  test_pdf.py  utils.py
docs/: patches.md
extractous-core/tika-native/src/main/java/ai/yobix/: ParsingReader.java  TikaNativeMain.java
iscc-tika-core/: Cargo.toml  README.md  build.rs  clippy.toml  setup_tika_native.py
iscc-tika-core/benches/: extractor.rs
iscc-tika-core/examples/: extract_to_stream.rs  extract_to_string.rs
iscc-tika-core/src/: config.rs  errors.rs  extractor.rs  lib.rs
iscc-tika-core/src/tika/: jni_utils.rs  parse.rs  wrappers.rs
iscc-tika-core/tests/: extract_to_stream_tests.rs  extract_to_string_tests.rs  extract_to_xml_tests.rs
iscc-tika-core/tika-native/: build.gradle
iscc-tika-core/tika-native/gradle/wrapper/: gradle-wrapper.properties
iscc-tika-core/tika-native/src/main/java/io/iscc/tika/: ByteBufferInputStream.java  ParsingReader.java  ReaderResult.java  StringResult.java  TikaNativeMain.java
test_files/expected_result/: 2022_Q3_AAPL.pdf.metadata.json  2022_Q3_AAPL.pdf.txt  category-level.docx.txt  deu-ocr.pdf.txt  eng-ocr.pdf.txt  table-multi-row-column-cells-actual.csv.txt  table-multi-row-column-cells.png.metadata.json  vodafone.xlsx.txt
