[package]
name = "iscc-tika"
version = "0.5.0"
edition = "2021"

description = """
Fast text and metadata extraction from documents (PDF, Word, HTML, etc.) using Rust with Apache Tika compiled to native
code via GraalVM.
"""
license = "Apache-2.0"
homepage = "https://github.com/iscc/iscc-tika"
repository = "https://github.com/iscc/iscc-tika"
authors = ["Titusz Pan"]
readme = "README.md"
keywords = ["unstructured", "tika", "text", "pdf", "parser"]
categories = ["parsing", "text-processing"]

[features]
stream-attachguard = []

[[bench]]
name = "extractor"
harness = false
required-features = []

[dependencies]
libc = { version = "0.2.158" }
jni = { version = "0.21.1", features = ["invocation"] }
thiserror = { version = "1.0.63" }
bytemuck = { version = "1.17.1" }
# String enums
strum = { version = "0.26.2" }
strum_macros = { version = "0.26.2" }

[dev-dependencies]
textdistance = "1.1.0"
test-case = "3.0"
criterion = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.37.1"

[profile.release]
opt-level = 3
lto = "thin"
rpath = true
