[package]
name = "iscc-tika-python"
publish = false

authors = ["Titusz Pan"]
edition = "2021"
homepage = "https://github.com/iscc/iscc-tika"
license = "Apache-2.0"
repository = "https://github.com/iscc/iscc-tika"
rust-version = "1.75"
version = "0.6.0"


[lib]
name = "iscc_tika"      # This has to match the folder name under python folder i.e. python/iscc_tika/
crate-type = ["cdylib"]
doc = false

[dependencies]
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
pyo3 = { version = "0.23.3", features = ["abi3", "abi3-py310"] }
iscc-tika = { path = "../../iscc-tika-core" }
